<resources>
    <string name="app_name">UserProject</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="to_order">to order</string>
    <string name="camera_info">camera info</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="cheng_map">Change map radius</string>
    <string name="btn_update_radius">ok</string>
    <string name="number">number</string>
    <string name="send">Send</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="traffic">Traffic</string>
    <string name="my_photo">my photo</string>
    <string name="my_name">name</string>
    <string name="data">data</string>
    <string name="likes">likes</string>
    <string name="map">map</string>
    <string name="post">post</string>
    <string name="favorite">favorite</string>
    <string name="my_language">Language</string>
    <string name="switch_my">Switch</string>
    <string name="my_about">About</string>
    <string name="my_phone">Phone</string>
    <string name="about_app">The application allows you to search for photographers, which are near your location, and order them.</string>
    <string name="owner">Owner</string>
    <string name="members">Members</string>
    <string name="_2017_vtc_android_team">\@2017 VTC Android Team</string>
    <string name="english">english</string>
    <string name="armenain">armenian</string>
    <string name="german">german</string>
    <string name="spanish">spanish</string>
    <string name="russian">russian</string>
    <string name="Rating">Rating</string>

</resources>
