<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/language_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/english"
            android:id="@+id/rb_english"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_armenian"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:text="@string/armenain" />

        <RadioButton
            android:text="@string/german"
            android:id="@+id/rb_german"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/spanish"
            android:id="@+id/rb_spanish"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/russian"
            android:id="@+id/rb_russian"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RadioGroup>

    <Button
       android:layout_gravity="end"
        android:id="@+id/btn_confirm"
        android:text="Ok"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>