<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGreen"
    android:orientation="vertical"
    tools:context="com.example.student.userproject.fragment.PhotographDetailInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_avatar"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"
                android:hint="@string/name"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_detail_address"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:hint="@string/address"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btn_favorite"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/camera_img"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

                <TextView
                    android:id="@+id/tv_detail_camera_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:hint="@string/camera_info"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_img"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.17"
                    app:srcCompat="@drawable/ic_email_black_24dp" />

                <TextView
                    android:id="@+id/tv_detail_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:hint="@string/email"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/send_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/to_order" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:isIndicator="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:stepSize="0.05"
        android:theme="@style/RatingBar" />

    <FrameLayout
        android:id="@+id/pager_layout"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:visibility="visible">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</LinearLayout>
